# mediapipe_cpu

./: README.md  pyproject.toml  run.py
