[tool.poetry]
name = "hand_tracking"
version = "0.1.0"
description = ""
authors = ["lpy <u0251077@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
opencv-python = "^4.4.0"
tensorflow-gpu = "^2.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
